overflow improvements and minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -169,10 +169,9 @@ img {
 }
 
 .catalog-link {
-  display: block;
   width: 141px;
   height: 38px;
-  margin-bottom: 12px;
+  margin-bottom: 22px;
   margin-left: 15px;
   font-family: "PT Sans", Arial, sans-serif;
   font-weight: bold;
@@ -181,7 +180,6 @@ img {
   color: var(--basic-white);
   background: url(../img/misc/red-button.svg) no-repeat;
   box-sizing: border-box;
-  grid-row: 4 / 5;
   padding: 10px 15px 0 0;
 }
 
@@ -573,7 +571,7 @@ img {
 
 .features-list__item {
   width: 300px;
-  height: 123px;
+  min-height: 123px;
 }
 
 .features-list__item:nth-child(1) {
@@ -603,16 +601,19 @@ img {
 }
 
 .features-list__item p {
+  width: 150px;
   margin: 20px 0 15px 25px;
   font-family: "Cuprum", Arial, sans-serif;
   font-weight: bold;
   font-size: 24px;
   line-height: 30px;
   color: var(--basic-white);
+  word-break: break-word;
 }
 
 .features-link {
   margin-left: 20px;
+  margin-bottom: 20px;
   width: 135px;
   background-color: var(--tranparent-white);
 }
@@ -921,6 +922,22 @@ img {
   margin: 0;
 }
 
+.services-desc-list__item--delivery p:nth-child(2) {
+  width: 275px;
+}
+
+.services-desc-list__item--delivery p:nth-child(3) {
+  width: 225px;
+}
+
+.services-desc-list__item--warranty p {
+  width: 312px;
+}
+
+.services-desc-list__item--credit p {
+  width: 278px;
+}
+
 .services-desc-list__item .site-link {
   margin-top: 26px;
 }
@@ -936,13 +953,19 @@ img {
   flex-direction: column;
 }
 
- .about-us .heading, .contacts .heading {
+.about-us .heading,
+.contacts .heading {
   margin-bottom: 25px;
- }
+}
 
- .about-us .heading + p {
-   margin-bottom: 27px;
- }
+.about-us p:nth-child(3) {
+  margin-bottom: 27px;
+   width: 450px;
+}
+
+.about-us p:nth-child(4) {
+  width: 445px;
+}
 
  .about-us > p, .contacts > p {
   margin: 0;
@@ -1209,17 +1232,15 @@ img {
 
 .catalog-filters__vendors input:checked + label {
   background: url("../img/icons/checkbox-on.svg") no-repeat 0 5px;
-  opacity: 0.5;
 }
 
 .catalog-filters__power-supply input:checked + label {
   background: url("../img/icons/radio-on.svg") no-repeat 0 2px;
-  opacity: 0.5;
 }
 
 .catalog-filters__vendors label:hover,
 .catalog-filters__power-supply label:hover {
-  opacity: 1 !important;
+  opacity: 1;
 }
 
 .catalog-filters__vendors input:focus + label,
@@ -1362,9 +1383,8 @@ img {
 .catalog-product-card {
   width: 220px;
   min-height: 318px;
-  display: grid;
-  grid-template-rows: 165px auto 18px auto;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   text-align: center;
   box-sizing: border-box;
@@ -1396,8 +1416,15 @@ img {
   right: 12px;
 }
 
+
+.catalog-product-card__popup {
+  margin: 40px 0;
+}
+
 .catalog-product-card img {
-  object-fit: contain;
+  width: 165px;
+  height: 165px;
+  object-fit: scale-down;
 }
 
 .catalog-product-card__buy-btn,
@@ -1471,7 +1498,9 @@ img {
   font-size: 18px;
   line-height: 20px;
   margin: 0;
-  margin-top: 2px;
+  margin-top: 10px;
+  width: 160px;
+  flex-grow: 1;
 }
 
 .catalog-product-card p {
@@ -1482,8 +1511,10 @@ img {
   text-decoration-line: line-through;
   text-transform: uppercase;
   color: var(--basic-extra-dark);
+  width: 150px;
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 13px;
+  word-break: break-word;
 }
 
 .catalog-pagination_list {
